--- a/main.ipynb
+++ b/main.ipynb
@@ -487,7 +487,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cost_function=StereoCost.SSD\n",
+    "aggregation_function=fixed_window(5)\n",
+    "disparity_computation=DisparityComputation(strategy='dynamic-programming')\n",
+    "disparity_refinement=None\n",
+    "StereoPipeline(image_name,\n",
+    "                cost_function, \n",
+    "                aggregation_function,\n",
+    "                disparity_computation,\n",
+    "                disparity_refinement,\n",
+    "                max_disparity=96).compute_disparity_map()"
+   ]
   }
  ],
  "metadata": {
